# linperm

./: Cargo.toml  LICENSE  README.md  katex-header.html
.claude/skills/initialize-linperm/: SKILL.md
.claude/skills/initialize-perms/: SKILL.md
app/: Cargo.toml
app/src/: main.rs
app/tests/: integration.rs
biperm/: Cargo.toml
biperm/benches/: config.rs  index.rs  phases.rs  prove.rs  verify.rs
biperm/benches/common/: mod.rs
biperm/src/: lib.rs
biperm/tests/: integration.rs
hyrax/: Cargo.toml
hyrax/src/: lib.rs  matrix.rs
mulperm/: Cargo.toml
mulperm/src/: lib.rs
permcore/: Cargo.toml
permcore/benches/: eq.rs
permcore/src/: eq.rs  error.rs  lib.rs  pcs.rs  permutation.rs  sumcheck.rs  transcript.rs  zerocheck.rs
permcore/tests/: integration.rs
scripts/: index-phases-table.sh  phases-table.sh  prove-phases-table.sh
