[workspace]
members = ["permcore", "biperm", "mulperm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradcush/linperm"

[workspace.dependencies]
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-std = { version = "0.5", default-features = false }
merlin = { version = "3", default-features = false }
criterion = { version = "0.5", default-features = false }

permcore = { path = "permcore" }
biperm = { path = "biperm" }
mulperm = { path = "mulperm" }
