[package]
name = "biperm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BiPerm"

[dependencies]
permcore.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true

[dev-dependencies]
hyrax.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-std = { workspace = true, features = ["std"] }
criterion.workspace = true

[[bench]]
name = "verify"
harness = false

[[bench]]
name = "prove"
harness = false

[features]
default = ["std"]
std = ["permcore/std"]
parallel = ["permcore/parallel"]
