[package]
name = "hyrax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyrax multilinear PCS (backend)"

[dependencies]
permcore.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-std.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-std = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "permcore/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "ark-std/std",
]
parallel = [
    "permcore/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]
