[package]
name = "mulperm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MulPerm"

[dependencies]
permcore.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true

[features]
default = ["std"]
std = ["permcore/std"]
parallel = ["permcore/parallel"]
