[package]
name = "permcore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Building blocks for permutation arguments."

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
merlin.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-std = { workspace = true, features = ["std"] }
criterion.workspace = true

[[bench]]
name = "eq"
harness = false

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-serialize/std",
    "ark-std/std",
]
parallel = [
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]
